fix mockito error and add loc count